Updated website with thicker, cuter font

--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             text-align: center;
         }
 
-        /* Title styling */
+        /* Title styling with thicker font */
         .banner h1 {
             color: white;
-            font-family: 'Playfair Display', serif; /* Curly bold serif font */
-            font-size: 48px;
+            font-family: 'Pacifico', cursive; /* Thicker, cuter font */
+            font-size: 50px; /* Larger font size */
             font-weight: bold;
             margin: 0;
         }
@@ -41,8 +41,8 @@
         }
     </style>
 
-    <!-- Link to Google Fonts for the curly bold serif font -->
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <!-- Link to Google Fonts for the cute thicker font -->
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
 
