Added Dream weaver section.

--- a/index.html
+++ b/index.html
@@ -57,5 +57,46 @@
         <p>We will list all the missing features, suits, and updates here.</p>
     </div>
 
+<!-- Dreamweaver Section -->
+<section id="dreamweaver">
+    <h2>Dreamweaver</h2>
+    <div class="gallery">
+        <div class="gallery-item">
+            <a href="missing_dw/baidw.png" data-fancybox="gallery">
+                <img src="missing_dw/baidw.png" alt="Dreamweaver Image - Bai">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="missing_dw/mingdw.png" data-fancybox="gallery">
+                <img src="missing_dw/mingdw.png" alt="Dreamweaver Image - Ming">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="missing_dw/nancydw.png" data-fancybox="gallery">
+                <img src="missing_dw/nancydw.png" alt="Dreamweaver Image - Nancy">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="missing_dw/orlandodw.png" data-fancybox="gallery">
+                <img src="missing_dw/orlandodw.png" alt="Dreamweaver Image - Orlando">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="missing_dw/roycedw.png" data-fancybox="gallery">
+                <img src="missing_dw/roycedw.png" alt="Dreamweaver Image - Royce">
+            </a>
+        </div>
+        <div class="gallery-item">
+            <a href="missing_dw/yuedw.png" data-fancybox="gallery">
+                <img src="missing_dw/yuedw.png" alt="Dreamweaver Image - Yue">
+            </a>
+        </div>
+    </div>
+    <p>Here are the Dream weavers missing from our server.</p>
+</section>
+
+
+
+
 </body>
 </html>
